--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../slick/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="../slick/slick/slick-theme.css"/>
-    <link rel="stylesheet" href="css/tailwind.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./src/css/tailwind.css">
+    <link rel="stylesheet" href="./src/css/style.css">
     <title>manage</title>
 </head>
 <body class="flex flex-col  m-0 overflow-x-hidden   ">
